<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_UnlockTable">

    <TextView
        android:id="@+id/splash_LBL_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:alpha="0.56"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:src="@drawable/back_gradient"
        android:contentDescription="@string/backgroup_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"   />

    <ImageView
        android:id="@+id/splash_IMG_logo2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/splash_LBL_name2"
        android:layout_alignStart="@+id/splash_LBL_name2"
        android:layout_alignEnd="@+id/splash_LBL_name2"
        android:layout_marginTop="44dp"
        android:src="@drawable/guycartoon"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="@+id/splash_LBL_name2"
        app:layout_constraintStart_toStartOf="@+id/splash_LBL_name2"
        app:layout_constraintTop_toBottomOf="@+id/splash_LBL_name2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_below="@+id/splash_IMG_logo2"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="324dp" />

</RelativeLayout>