<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_LBL_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="579dp"
        android:text="@string/user_unlocked"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/main_LBL_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button"
        android:layout_alignStart="@+id/main_LBL_info"
        android:layout_alignEnd="@+id/main_LBL_info"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="526dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/main_LBL_info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button"
        android:layout_alignStart="@+id/main_LBL_info"
        android:layout_alignEnd="@+id/main_LBL_info"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="471dp"
        android:text="@string/user_times"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/main_LBL_info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button"
        android:layout_alignStart="@+id/main_LBL_info"
        android:layout_alignEnd="@+id/main_LBL_info"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="406dp"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/main_LBL_info5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_button"
        android:layout_alignStart="@+id/main_LBL_info"
        android:layout_alignEnd="@+id/main_LBL_info"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="349dp"
        android:text="@string/user_days"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="45dp"
        android:text="Button" />

</RelativeLayout>